--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-redux": "8.1.1",
     "react-router-dom": "6.14.0",
     "swiper": "^11.1.14",
+    "use-debounce": "^10.0.4",
     "use-mask-input": "^3.4.0"
   },
   "devDependencies": {
